modify heading css

--- a/index.html
+++ b/index.html
@@ -16,40 +16,42 @@
         <div class="container">
             <nav class="nav">
                 <ul class="nav__list white-text">
-                    <li class="nav__list--item line-space"><a href="#">Kênh người bán</a></li>
-                    <li class="nav__list--item line-space"><a href="#">Trở thành Người bán Shopee</a></li>
-                    <li class="nav__list--item line-space"><a href="#">Tải ứng dụng</a></li>
+                    <li class="nav__list--item line-space"><a  class= "item--link"href="#">Kênh người bán</a></li>
+                    <li class="nav__list--item line-space"><a  class= "item--link"href="#">Trở thành Người bán Shopee</a></li>
+                    <li class="nav__list--item line-space"><a  class= "qr-code-img item--link"href="#">Tải ứng dụng</a></li>
                     <li class="nav__list--item line-space">Kết nối <a class="fb-icon-link" href="#"></a><a class="instag-icon-link" href="#"></a></li>
                 </ul>
                 <ul class="nav__list">
-                    <li class="nav__list--item"><a href="#"><i class="far fa-bell"></i> Thông báo</a></li>
-                    <li class="nav__list--item"><a href="#"><i class="far fa-question-circle"></i> Hỗ trợ</a></li>
-                    <li class="nav__list--item"><a href="#"><i class="fas fa-globe"></i> Tiếng Việt</a></li>
-                    <li class="nav__list--item line-space"><a href="#">Đăng ký</a></li>
-                    <li class="nav__list--item line-space"><a href="#">Đăng nhập</a></li>
+                    <li class="nav__list--item"><a class= "item--link" href="#"><i class="far fa-bell"></i> Thông báo</a></li>
+                    <li class="nav__list--item"><a class= "item--link" href="#"><i class="far fa-question-circle"></i> Hỗ trợ</a></li>
+                    <li class="nav__list--item"><a  class= "item--link"href="#"><i class="fas fa-globe"></i> Tiếng Việt</a></li>
+                    <li class="nav__list--item line-space"><a class= "item--link" href="#">Đăng ký</a></li>
+                    <li class="nav__list--item line-space"><a class= "item--link" href="#">Đăng nhập</a></li>
                 </ul>
             </nav>
-            <a href="#" class="main-logo"><img src="./assets/img/logo_duno.jpg" alt="dunoshop"></a>
-            <div class="search-bar">
-                <div class="search-bar__input">
-                    <input type="text" placeholder="Tìm sản phẩm, thương hiệu, và tên shop">
-                    <button class="search-btn"><i class="fas fa-search"></i></button>
+            <div class="wrapper-logo-with-search">
+                <a href="#" class="main-logo"></a>
+                <div class="search-bar">
+                    <div class="search-bar__wrapper">
+                        <form role="search" class="search-bar__input" action="">
+                            <input type="text" placeholder="Tìm sản phẩm, thương hiệu, và tên shop">
+                        </form>
+                        <button class="search-btn"><i class="fas fa-search"></i></button>
+                    </div>
+                        <ul class="topkey__list">
+                            <li class="topkey__list--item"><a href="#">Móng Tay Giả</a></li>
+                            <li class="topkey__list--item"><a href="#">Váy Trắng</a></li>
+                            <li class="topkey__list--item"><a href="#">Nhẫn</a></li>
+                            <li class="topkey__list--item"><a href="#">Mặt Nạ</a></li>
+                            <li class="topkey__list--item"><a href="#">Giấy Dán Tường</a></li>
+                            <li class="topkey__list--item"><a href="#">Nồi Chiên Không Dầu</a></li>
+                        </ul>
                 </div>
-                <div class="search-bar__topkey">
-                    <ul class="topkey__list">
-                        <li class="topkey__list--item"><a href="#">Móng Tay Giả</a></li>
-                        <li class="topkey__list--item"><a href="#">Váy Trắng</a></li>
-                        <li class="topkey__list--item"><a href="#">Nhẫn</a></li>
-                        <li class="topkey__list--item"><a href="#">Mặt Nạ</a></li>
-                        <li class="topkey__list--item"><a href="#">Giấy Dán Tường</a></li>
-                        <li class="topkey__list--item"><a href="#">Nồi Chiên Không Dầu</a></li>
-                    </ul>
+                <div class="shopping-cart">
+                    <i class="fas fa-shopping-cart"></i>
                 </div>
             </div>
-            <div class="shopping-cart">
-                <i class="fas fa-shopping-cart"></i>
             </div>
-        </div>
     </header>
 </body>
 </html>
